--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
 	"name": "@plata/prettier-config",
-	"version": "0.0.2",
+	"version": "0.1.0",
 	"main": "index.js",
 	"license": "MIT",
+	"files": [],
+	"scripts": {
+		"release": "standard-version --release-as minor && git push --follow-tags origin HEAD"
+	},
 	"devDependencies": {
-		"@plata/commitlint": "^0.0.1",
+		"@plata/commitlint": "^0.0.2",
 		"husky": "^7.0.4",
 		"standard-version": "^9.3.2"
 	}
